k8s/kube-webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
    tier: frontend
  ports:
  - protocol: TCP
    port: 3000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
        track: stable
    spec:
      containers:
        - name: webapp
          image: usmakestwo/webapp
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          resources:
              requests:
                memory: "64Mi"
                #0.25 cpu
                cpu: "250m"
              limits:
                #0.5 cpu
                memory: "128Mi"
                cpu: "500m"
